# toys

./: Builtins.html  Eval.html  HindleyMilner-Eval.html  HindleyMilner-Infer.html  HindleyMilner-Parse.html  HindleyMilner.html  Infer.html  Parse.html  README.md  Types.html  doc-index.html  doc-index.json  hindley-milner.cabal  hindley-milner.haddock  hindley-milner.txt  index.html
app/: REPL.hs
bananagrams/: Bananagrams-Dictionary.html  Bananagrams-Grid.html  Bananagrams-Log.html  Bananagrams.html  LICENSE  README.md  bananagrams.cabal  bananagrams.haddock  bananagrams.txt  doc-index.html  doc-index.json  index.html  stack.yaml
bananagrams/app/: Main.hs
bananagrams/src/: Bananagrams.Dictionary.html  Bananagrams.Grid.html  Bananagrams.Log.html  Bananagrams.hs  Bananagrams.html
bananagrams/src/Bananagrams/: Dictionary.hs  Grid.hs  Log.hs
bananagrams/test/: Spec.hs
examples/: func.hm  math.hm
hindley-milner/: HindleyMilner-Eval.html  HindleyMilner-Parse.html  HindleyMilner.html  README.md  doc-index.html  doc-index.json  hindley-milner.cabal  hindley-milner.haddock  hindley-milner.txt
hindley-milner/app/: REPL.hs
hindley-milner/src/: HindleyMilner.Eval.html  HindleyMilner.Infer.html  HindleyMilner.Parse.html  HindleyMilner.hs  HindleyMilner.html
hindley-milner/src/HindleyMilner/: Eval.hs  Infer.hs  Parse.hs
hindley-milner/test/: Spec.hs
minesweeper/: Makefile  README.md
minesweeper/src/: main.c
scripts/: publish-haddock
src/: Builtins.html  Eval.html  HindleyMilner.Eval.html  HindleyMilner.Infer.html  HindleyMilner.Parse.html  HindleyMilner.hs  HindleyMilner.html  Infer.html  Parse.html  Types.html
src/HindleyMilner/: Infer.hs  Parse.hs
tetris/: README.md  Tetris-Board.html  Tetris.html  doc-index.html  doc-index.json  index.html  stack.yaml  tetris.cabal  tetris.haddock  tetris.txt
tetris/app/: Main.hs
tetris/apps/brick/: Main.hs
tetris/apps/gloss/: Main.hs
tetris/src/: Paths_tetris.html  Tetris.Board.html  Tetris.hs  Tetris.html
tetris/src/Tetris/: Board.hs
