cabal-version: 1.12

name: bananagrams
version: 0.0.1.1
description: A toy Bananagrams solver
homepage: https://github.com/mtth/toys/tree/master/bananagrams
author: Matthieu Monsch
maintainer: mtth@apache.org
copyright: 2019 Matthieu Monsch
license: BSD3
license-file: LICENSE
build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/mtth/toys

library
  hs-source-dirs: src
  exposed-modules:
      Bananagrams
  other-modules:
      Bananagrams.Dictionary
    , Bananagrams.Grid
    , Bananagrams.Log
  build-depends:
      array
    , base >=4.7 && <5
    , bytestring
    , containers
    , extra
    , lattices
    , logging-effect
    , more-containers
    , mtl
    , prettyprinter
    , text
    , text-format
    , time
    , transformers
    , vector
    , vector-algorithms
    , yx
  default-language: Haskell2010

executable bananagrams
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      bananagrams
    , base >=4.7 && <5
    , bytestring
    , containers
    , flags-applicative
    , more-containers
    , text
    , yx
  default-language: Haskell2010

test-suite bananagrams-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      bananagrams
    , base >=4.11 && <5
    , containers
    , more-containers
    , hspec
    , text
    , yx
  default-language: Haskell2010
