cabal-version: 1.12

name: hindley-milner
version: 0.0.2.1
synopsis: Toy Hindley-Milner implementation
homepage: https://github.com/mtth/toys/tree/master/hindley-milner
license: BSD3
license-file: LICENSE
author: Matthieu Monsch
maintainer: mtth@apache.org
copyright: 2019 Matthieu Monsch
category: Web
build-type: Simple
extra-source-files: README.md

library
  hs-source-dirs: src
  exposed-modules: HindleyMilner
                 , HindleyMilner.Eval
                 , HindleyMilner.Infer
                 , HindleyMilner.Parse
  build-depends: base >= 4.8 && < 5
               , containers >= 0.6
               , mtl >= 2.2
               , megaparsec >= 7.0
               , scientific >= 0.3.6
               , text >= 1.2
  default-language: Haskell2010
  ghc-options: -Wall


executable hindley-milner-repl
  hs-source-dirs: app
  main-is: REPL.hs
  default-language: Haskell2010
  build-depends: base >= 4.7
               , containers >= 0.6
               , hindley-milner
               , mtl >= 2.2
               , text >= 1.2
  ghc-options: -Wall

test-suite hindley-milner-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.8 && <5
               , containers >= 0.6
               , hspec >=2.6
               , text >= 1.2
               , hindley-milner
               , megaparsec >= 7.0
               , mtl >= 2.2
  default-language: Haskell2010

