cabal-version: 2.4

name: tetris
version: 0.0.1.0
description: Tetris, a game
homepage: https://github.com/mtth/toys/tree/master/tetris
author: Matthieu Monsch
maintainer: mtth@apache.org
copyright: 2019-2020 Matthieu Monsch
license: BSD-3-Clause
license-file: LICENSE

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/mtth/toys

library
  exposed-modules:
      Tetris
    , Tetris.Board
  hs-source-dirs:
      src
  build-depends:
      array
    , base >=4.7 && <5
    , bytestring
    , containers
    , logging-effect
    , more-containers
    , random >= 1.1
    , text
    , text-format
    , yx >= 0.0.3.0
  default-language: Haskell2010

executable tetris-brick
  main-is: Main.hs
  hs-source-dirs:
      apps/brick
  build-depends:
      base >=4.7 && <5
    , brick
    , containers
    , logging-effect
    , tetris
    , vty
    , yx >= 0.0.3.0
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010

executable tetris-gloss
  main-is: Main.hs
  hs-source-dirs:
      apps/gloss
  build-depends:
      array
    , base >=4.7 && <5
    , bytestring
    , containers
    , gloss
    , logging-effect
    , tetris
    , text
    , text-format
    , yx >= 0.0.3.0
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010
